<?xml version="1.0"?>
<package format="2">
  <name>my_ddynamic_package</name>
  <version>0.0.0</version>
  <description>The my_ddynamic_package package</description>

  <maintainer email="denny@todo.todo">denny</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>ddynamic_reconfigure</build_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>ddynamic_reconfigure</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>ddynamic_reconfigure</exec_depend>
  <exec_depend>roscpp</exec_depend>

  <export/>
</package>
